# mygb

./: .clang-format  CMakeLists.txt  Makefile
include/: cpu.c  memory.c  registers.c  rom.c
roms/: README.md
src/: cpu.h  defines.h  main.c  memory.h  registers.h  rom.h
